--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Háttér animáció -->
+    <div class="background-blur">
+        <svg id="background-svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
+            <defs>
+                <style id="svg-style">
+                    @keyframes rotate {
+                        0% {
+                            transform: rotate(0deg);
+                        }
+                        100% {
+                            transform: rotate(360deg);
+                        }
+                    }
+                    .out-top {
+                        animation: rotate 20s linear infinite;
+                        transform-origin: 13px 25px;
+                    }
+                    .in-top {
+                        animation: rotate 10s linear infinite;
+                        transform-origin: 13px 25px;
+                    }
+                    .out-bottom {
+                        animation: rotate 25s linear infinite;
+                        transform-origin: 84px 93px;
+                    }
+                    .in-bottom {
+                        animation: rotate 15s linear infinite;
+                        transform-origin: 84px 93px;
+                    }
+                </style>
+            </defs>
+            <path fill="#9b5de5" class="out-top" d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"/>
+            <path fill="#f15bb5" class="in-top" d="M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z"/>
+            <path fill="#00bbf9" class="out-bottom" d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"/>
+            <path fill="#00f5d4" class="in-bottom" d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"/>
+        </svg>
+    </div>
+
     <div id="settings-panel">
         <button id="settings-toggle">⚙️</button>
         <div id="settings-content" class="hidden">
@@ -20,19 +58,81 @@
             </label>
         </div>
     </div>
+    
+    <div id="help-buttons" class="hidden">
+        <button id="half-btn" class="help-btn" title="Felezés (Eltávolít 2 rossz választ)">🔪<span class="help-counter">1</span></button>
+        <button id="hint-btn" class="help-btn" title="Tipp (Mutat egy tippet)">💡<span class="help-counter">1</span></button>
+        <button id="dbl-btn" class="help-btn" title="Dupla esély (2 választás)">✌️<span class="help-counter">1</span></button>
+    </div>
 
     <div id="start-screen">
         <h1>🌟 Kvíz Játék 🌟</h1>
         <input type="file" id="json-upload" accept=".json">
+        <div id="help-toggle-container">
+            <button id="help-toggle" class="help-toggle-btn">💡 Segítségek</button>
+        </div>
+        <div id="help-options" class="hidden">
+            <div class="help-option">
+                <div>
+                    <h4>Felezés</h4>
+                    <p class="help-desc">Elveszi a lehetséges válaszok felét így csak 2 válaszlehetőség marad</p>
+                </div>
+                <div class="help-controls">
+                    <button id="dec-half" class="control-btn">-</button>
+                    <span id="count-half">1</span>
+                    <button id="inc-half" class="control-btn">+</button>
+                </div>
+            </div>
+            <div class="help-option">
+                <div>
+                    <h4>Hint</h4>
+                    <p class="help-desc">Mutat egy tippet a kérdéshez</p>
+                </div>
+                <div class="help-controls">
+                    <button id="dec-hint" class="control-btn">-</button>
+                    <span id="count-hint">1</span>
+                    <button id="inc-hint" class="control-btn">+</button>
+                </div>
+            </div>
+            <div class="help-option">
+                <div>
+                    <h4>Dupla esély</h4>
+                    <p class="help-desc">Lehetőséged van két választani</p>
+                </div>
+                <div class="help-controls">
+                    <button id="dec-dbl" class="control-btn">-</button>
+                    <span id="count-dbl">1</span>
+                    <button id="inc-dbl" class="control-btn">+</button>
+                </div>
+            </div>
+        </div>
         <button id="start-btn">🎮 Indítás</button>
     </div>
 
     <div id="quiz-screen" class="hidden">
         <div id="background-music"></div>
+        <div id="progress">1/1</div>
         <h2 id="question-text"></h2>
+        <div id="hint" class="hint-box hidden">
+            <span>💡</span>
+            <span class="hint-content"></span>
+        </div>
         <img id="question-image" src="" alt="Kérdéshez tartozó kép" class="hidden">
         <div id="answers-container"></div>
+        <div id="trivia" class="trivia-box hidden">
+            <div class="trivia-header">Trívia</div>
+            <div class="trivia-content">
+                <span>🧠</span>
+                <span class="trivia-text"></span>
+            </div>
+        </div>
         <button id="next-btn" class="hidden">➡️ Tovább</button>
+    </div>
+
+    <div id="results-screen" class="hidden">
+        <h2 id="results-header">Eredmény</h2>
+        <div id="results-content"></div>
+        <button id="restart-btn" class="hidden">🔄 Új játék</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
